; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_radio_mode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_wbusb.c_hal_set_radio_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_data = type { i32, i64, %struct.wb35_reg }
%struct.wb35_reg = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hw_data*, i8)* @hal_set_radio_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hal_set_radio_mode(%struct.hw_data* %0, i8 zeroext %1) #0 {
  %3 = alloca %struct.hw_data*, align 8
  %4 = alloca i8, align 1
  %5 = alloca %struct.wb35_reg*, align 8
  store %struct.hw_data* %0, %struct.hw_data** %3, align 8
  store i8 %1, i8* %4, align 1
  %6 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %7 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %6, i32 0, i32 2
  store %struct.wb35_reg* %7, %struct.wb35_reg** %5, align 8
  %8 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %9 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %36

13:                                               ; preds = %2
  %14 = load i8, i8* %4, align 1
  %15 = icmp ne i8 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %13
  %17 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %18 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %17, i32 0, i32 0
  store i32 1, i32* %18, align 8
  %19 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %20 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = and i32 %21, -65
  store i32 %22, i32* %20, align 4
  br label %30

23:                                               ; preds = %13
  %24 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %25 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %24, i32 0, i32 0
  store i32 0, i32* %25, align 8
  %26 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %27 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = or i32 %28, 64
  store i32 %29, i32* %27, align 4
  br label %30

30:                                               ; preds = %23, %16
  %31 = load %struct.hw_data*, %struct.hw_data** %3, align 8
  %32 = load %struct.wb35_reg*, %struct.wb35_reg** %5, align 8
  %33 = getelementptr inbounds %struct.wb35_reg, %struct.wb35_reg* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i32 @Wb35Reg_Write(%struct.hw_data* %31, i32 2084, i32 %34)
  br label %36

36:                                               ; preds = %30, %12
  ret void
}

declare dso_local i32 @Wb35Reg_Write(%struct.hw_data*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
